fix Alignment 3

--- a/main.css
+++ b/main.css
@@ -253,8 +253,8 @@ body {
   .worrior-2 {
     position: absolute;
     width: 30%;
-    height: 20%;
-    bottom: 61%;
+    height: 30%;
+    bottom: 51%;
     left: 5%;
     background-image: url("img/Group\ 6.png");
     background-repeat: no-repeat;
